--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "package": "electron-forge package",
     "make": "electron-forge make",
     "publish": "electron-forge publish",
-    "lint": "eslint --ext .ts,.tsx ."
+    "lint": "eslint --ext .ts,.tsx .",
+    "typecheck": "tsc --noEmit -p tsconfig.node.json && tsc --noEmit -p tsconfig.json"
   },
   "keywords": [],
   "author": {
@@ -18,30 +19,31 @@
   },
   "license": "MIT",
   "devDependencies": {
-    "@electron-forge/cli": "^7.9.0",
-    "@electron-forge/maker-deb": "^7.9.0",
-    "@electron-forge/maker-rpm": "^7.9.0",
-    "@electron-forge/maker-squirrel": "^7.9.0",
-    "@electron-forge/maker-zip": "^7.9.0",
-    "@electron-forge/plugin-auto-unpack-natives": "^7.9.0",
-    "@electron-forge/plugin-fuses": "^7.9.0",
-    "@electron-forge/plugin-vite": "^7.9.0",
-    "@electron/fuses": "^1.8.0",
-    "@types/electron-squirrel-startup": "^1.0.2",
-    "@types/react": "^19.1.14",
-    "@types/react-dom": "^19.1.9",
-    "@typescript-eslint/eslint-plugin": "^5.62.0",
-    "@typescript-eslint/parser": "^5.62.0",
-    "@vitejs/plugin-react": "^5.0.4",
+    "@electron-forge/cli": "7.9.0",
+    "@electron-forge/maker-deb": "7.9.0",
+    "@electron-forge/maker-rpm": "7.9.0",
+    "@electron-forge/maker-squirrel": "7.9.0",
+    "@electron-forge/maker-zip": "7.9.0",
+    "@electron-forge/plugin-auto-unpack-natives": "7.9.0",
+    "@electron-forge/plugin-fuses": "7.9.0",
+    "@electron-forge/plugin-vite": "7.9.0",
+    "@electron/fuses": "1.8.0",
+    "@types/electron-squirrel-startup": "1.0.2",
+    "@types/node": "24.5.2",
+    "@types/react": "19.1.14",
+    "@types/react-dom": "19.1.9",
+    "@typescript-eslint/eslint-plugin": "8.44.1",
+    "@typescript-eslint/parser": "8.44.1",
+    "@vitejs/plugin-react": "5.0.4",
     "electron": "38.1.2",
-    "eslint": "^8.57.1",
-    "eslint-plugin-import": "^2.32.0",
-    "typescript": "~4.5.4",
-    "vite": "^5.4.20"
+    "eslint": "9.36.0",
+    "eslint-plugin-import": "2.32.0",
+    "typescript": "5.9.2",
+    "vite": "7.1.7"
   },
   "dependencies": {
-    "electron-squirrel-startup": "^1.0.1",
-    "react": "^19.1.1",
-    "react-dom": "^19.1.1"
+    "electron-squirrel-startup": "1.0.1",
+    "react": "19.1.1",
+    "react-dom": "19.1.1"
   }
 }
