--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@electron-forge/plugin-fuses": "7.9.0",
     "@electron-forge/plugin-vite": "7.9.0",
     "@electron/fuses": "1.8.0",
+    "@tailwindcss/vite": "4.1.13",
     "@types/electron-squirrel-startup": "1.0.2",
     "@types/node": "24.5.2",
     "@types/react": "19.1.14",
@@ -38,6 +39,7 @@
     "electron": "38.1.2",
     "eslint": "9.36.0",
     "eslint-plugin-import": "2.32.0",
+    "tailwindcss": "4.1.13",
     "typescript": "5.9.2",
     "vite": "7.1.7"
   },
