feat: add Playwright integration for end-to-end testing and update configuration

--- a/package.json
+++ b/package.json
@@ -6,11 +6,13 @@
   "main": ".vite/build/main.js",
   "scripts": {
     "start": "electron-forge start",
+    "dev:renderer": "vite --config vite.renderer.config.mts",
     "package": "electron-forge package",
     "make": "electron-forge make",
     "publish": "electron-forge publish",
     "lint": "eslint --ext .ts,.tsx .",
-    "typecheck": "tsc --noEmit -p tsconfig.node.json && tsc --noEmit -p tsconfig.json"
+    "test:e2e": "playwright test",
+    "test:e2e:ui": "playwright test --ui"
   },
   "keywords": [],
   "author": {
@@ -28,6 +30,7 @@
     "@electron-forge/plugin-fuses": "7.9.0",
     "@electron-forge/plugin-vite": "7.9.0",
     "@electron/fuses": "1.8.0",
+    "@playwright/test": "^1.55.1",
     "@tailwindcss/vite": "4.1.13",
     "@types/electron-squirrel-startup": "1.0.2",
     "@types/node": "24.5.2",
