--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -42,10 +42,10 @@ jobs:
       - name: Run Playwright tests
         run: npm run test:e2e
 
-      - name: Upload Playwright report on failure
+      - name: Upload Playwright artifacts on failure
         if: failure()
         uses: actions/upload-artifact@v4
         with:
-          name: playwright-report-${{ matrix.os }}
-          path: playwright-report/
+          name: playwright-output-${{ matrix.os }}
+          path: playwright-output/
           if-no-files-found: ignore
