--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "electron": "38.1.2",
     "eslint": "9.36.0",
     "eslint-plugin-import": "2.32.0",
+    "rollup": "4.52.3",
     "tailwindcss": "4.1.13",
     "typescript": "5.9.2",
     "vite": "7.1.7"
