feat: update build and run for e2e test on CI

--- a/tsconfig.node.json
+++ b/tsconfig.node.json
@@ -1,7 +1,7 @@
 {
   "extends": "./tsconfig.base.json",
   "compilerOptions": {
-    "outDir": "dist/main",
+    "outDir": ".vite/build",
     "module": "CommonJS",
     "types": [
       "node",
