--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
   "scripts": {
     "start": "electron-forge start",
     "dev:renderer": "vite --config vite.renderer.config.mts",
+    "build:electron": "tsc -p tsconfig.node.json",
+    "pretest:e2e": "npm run build:electron",
     "package": "electron-forge package",
     "make": "electron-forge make",
     "publish": "electron-forge publish",
