--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -30,6 +30,7 @@ jobs:
           cache: npm
 
       - name: Cache Playwright browsers
+        id: playwright-cache
         uses: actions/cache@v4
         with:
           path: .cache/ms-playwright
@@ -40,8 +41,13 @@ jobs:
       - name: Install dependencies
         run: npm ci
 
-      - name: Install Playwright browsers (all OS)
-        run: npx playwright install --with-deps
+      - name: Install Playwright browsers (cache miss)
+        if: steps.playwright-cache.outputs.cache-hit != 'true'
+        run: npx playwright install
+
+      - name: Install Playwright deps (Linux)
+        if: runner.os == 'Linux'
+        run: npx playwright install-deps
 
       - name: Run Playwright tests
         uses: GabrielBB/xvfb-action@v1
