--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -3,7 +3,14 @@ name: Tests
 on:
   push:
     branches:
-      - "**"
+      - main
+  pull_request:
+    branches:
+      - '**'
+
+concurrency:
+  group: e2e-${{ github.workflow }}-${{ github.head_ref || github.ref_name }}
+  cancel-in-progress: true
 
 jobs:
   e2e:
@@ -13,11 +20,10 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        os: [ubuntu-latest, macos-latest, windows-latest]
+        os: [ubuntu-22.04, macos-14, windows-2022]
 
     env:
       CI: true
-      PLAYWRIGHT_BROWSERS_PATH: ${{ github.workspace }}/.cache/ms-playwright
 
     steps:
       - name: Checkout repository
@@ -28,36 +34,26 @@ jobs:
         with:
           node-version: 20
           cache: npm
-
-      - name: Cache Playwright browsers
-        id: playwright-cache
-        uses: actions/cache@v4
-        with:
-          path: .cache/ms-playwright
-          key: ${{ runner.os }}-playwright-${{ hashFiles('package-lock.json') }}
-          restore-keys: |
-            ${{ runner.os }}-playwright-
+          cache-dependency-path: |
+            package-lock.json
+            playwright.config.ts
 
       - name: Install dependencies
         run: npm ci
 
-      - name: Install Playwright browsers (cache miss)
-        if: steps.playwright-cache.outputs.cache-hit != 'true'
-        run: npx playwright install
-
-      - name: Install Playwright deps (Linux)
-        if: runner.os == 'Linux'
-        run: npx playwright install-deps
+      - name: Setup Playwright
+        uses: microsoft/playwright-github-action@v1
 
       - name: Run Playwright tests
-        uses: GabrielBB/xvfb-action@v1
-        with:
-          run: npm run test:e2e
+        run: npm run test:e2e
 
-      - name: Upload Playwright artifacts on failure
-        if: failure()
+      - name: Upload Playwright artifacts
+        if: always()
         uses: actions/upload-artifact@v4
         with:
           name: playwright-output-${{ matrix.os }}
-          path: playwright-output/
+          path: |
+            playwright-output/report
+            playwright-output/test-results
           if-no-files-found: ignore
+          retention-days: 7
