--- a/package.json
+++ b/package.json
@@ -32,6 +32,8 @@
     "@electron-forge/plugin-fuses": "7.9.0",
     "@electron-forge/plugin-vite": "7.9.0",
     "@electron/fuses": "1.8.0",
+    "@eslint/eslintrc": "^3.3.1",
+    "@eslint/js": "^9.36.0",
     "@playwright/test": "^1.55.1",
     "@tailwindcss/vite": "4.1.13",
     "@types/electron-squirrel-startup": "1.0.2",
