--- a/package.json
+++ b/package.json
@@ -32,24 +32,24 @@
     "@electron-forge/plugin-fuses": "7.9.0",
     "@electron-forge/plugin-vite": "7.9.0",
     "@electron/fuses": "1.8.0",
-    "@eslint/eslintrc": "^3.3.1",
-    "@eslint/js": "^9.36.0",
     "@playwright/test": "^1.55.1",
     "@tailwindcss/vite": "4.1.13",
     "@types/electron-squirrel-startup": "1.0.2",
     "@types/node": "24.5.2",
     "@types/react": "19.1.14",
     "@types/react-dom": "19.1.9",
-    "@typescript-eslint/eslint-plugin": "8.44.1",
-    "@typescript-eslint/parser": "8.44.1",
     "@vitejs/plugin-react": "5.0.4",
     "electron": "38.1.2",
     "eslint": "9.36.0",
+    "eslint-import-resolver-typescript": "3.7.0",
     "eslint-plugin-import": "2.32.0",
+    "eslint-plugin-unicorn": "55.0.0",
+    "globals": "15.14.0",
     "lightningcss": "^1.30.2",
     "rollup": "4.52.3",
     "tailwindcss": "4.1.13",
     "typescript": "5.9.2",
+    "typescript-eslint": "8.44.1",
     "vite": "7.1.7"
   },
   "dependencies": {
