--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "publish": "electron-forge publish",
     "lint": "eslint .",
     "lint:fix": "eslint . --fix",
+    "test:unit": "vitest",
+    "test:unit:watch": "vitest --watch",
     "test:e2e": "playwright test",
     "test:e2e:ui": "playwright test --ui"
   },
@@ -51,7 +53,8 @@
     "tailwindcss": "4.1.13",
     "typescript": "5.9.2",
     "typescript-eslint": "8.44.1",
-    "vite": "7.1.7"
+    "vite": "7.1.7",
+    "vitest": "^3.2.4"
   },
   "dependencies": {
     "electron-squirrel-startup": "1.0.1",
