--- a/tsconfig.playwright.json
+++ b/tsconfig.playwright.json
@@ -7,7 +7,7 @@
     },
     "include": [
         "e2e/**/*.ts",
-        "src/types/**/*.d.ts",
+        "types/**/*.d.ts",
         "playwright.config.ts"
     ]
 }
