--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -34,9 +34,31 @@ jobs:
       - name: Run ESLint
         run: npm run lint
 
+  unit:
+    name: Unit tests
+    needs: lint
+    runs-on: ubuntu-22.04
+
+    steps:
+      - name: Checkout repository
+        uses: actions/checkout@v4
+
+      - name: Setup Node.js
+        uses: actions/setup-node@v4
+        with:
+          node-version: 20
+          cache: npm
+          cache-dependency-path: package-lock.json
+
+      - name: Install dependencies
+        run: npm ci
+
+      - name: Run unit tests
+        run: npm run test:unit
+
   e2e:
     name: E2E test on ${{ matrix.os }}
-    needs: lint
+    needs: unit
     runs-on: ${{ matrix.os }}
     timeout-minutes: 25
     strategy:
@@ -69,7 +91,7 @@ jobs:
           path: |
             ~/.cache/ms-playwright
             ~/Library/Caches/ms-playwright
-              C:\Users\runneradmin\AppData\Local\ms-playwright
+            C:\Users\runneradmin\AppData\Local\ms-playwright
           key: ${{ runner.os }}-playwright-${{ hashFiles('package-lock.json', 'playwright.config.ts') }}
           restore-keys: |
             ${{ runner.os }}-playwright-
