--- a/package.json
+++ b/package.json
@@ -48,13 +48,13 @@
     "eslint-plugin-import": "2.32.0",
     "eslint-plugin-unicorn": "55.0.0",
     "globals": "15.14.0",
-    "lightningcss": "^1.30.2",
+    "lightningcss": "1.30.2",
     "rollup": "4.52.3",
     "tailwindcss": "4.1.13",
     "typescript": "5.9.2",
     "typescript-eslint": "8.44.1",
     "vite": "7.1.7",
-    "vitest": "^3.2.4"
+    "vitest": "3.2.4"
   },
   "dependencies": {
     "electron-squirrel-startup": "1.0.1",
