--- a/tsconfig.node.json
+++ b/tsconfig.node.json
@@ -2,7 +2,7 @@
   "extends": "./tsconfig.base.json",
   "compilerOptions": {
     "outDir": ".vite/build",
-    "rootDir": "src/app",
+    "rootDir": "src/app/main",
     "module": "CommonJS",
     "types": [
       "node",
@@ -11,7 +11,6 @@
   },
   "include": [
     "src/app/main/**/*.ts",
-    "src/app/preload/**/*.ts",
     "types/**/*.d.ts"
   ]
 }
