fix: update build scripts and improve Vite configuration for better module handling

--- a/tsconfig.node.json
+++ b/tsconfig.node.json
@@ -1,8 +1,7 @@
 {
   "extends": "./tsconfig.base.json",
   "compilerOptions": {
-    "outDir": ".vite/build",
-    "rootDir": "src/app/main",
+    "noEmit": true,
     "module": "CommonJS",
     "types": [
       "node",
@@ -11,6 +10,7 @@
   },
   "include": [
     "src/app/main/**/*.ts",
+    "src/app/preload/**/*.ts",
     "types/**/*.d.ts"
   ]
 }
