fix: update module format to ESNext and adjust entry file extensions for Vite and Electron compatibility

--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "productName": "uniplot",
   "version": "1.0.0",
   "description": "My Electron application description",
-  "main": ".vite/build/main.js",
+  "main": ".vite/build/main.mjs",
   "scripts": {
     "start": "electron-forge start",
     "dev:renderer": "vite --config vite.renderer.config.mts",
