--- a/tsconfig.node.json
+++ b/tsconfig.node.json
@@ -2,7 +2,8 @@
   "extends": "./tsconfig.base.json",
   "compilerOptions": {
     "noEmit": true,
-    "module": "CommonJS",
+    "module": "ESNext",
+    "moduleResolution": "node",
     "types": [
       "node",
       "electron"
