--- a/tsconfig.web.json
+++ b/tsconfig.web.json
@@ -4,13 +4,7 @@
     "outDir": "dist/renderer",
     "module": "ESNext",
     "jsx": "react-jsx",
-    "lib": [
-      "ES2023",
-      "DOM"
-    ]
+    "lib": ["ES2023", "DOM"]
   },
-  "include": [
-    "src/app/renderer",
-    "types/**/*.d.ts"
-  ]
+  "include": ["src/app/renderer", "types/**/*.d.ts"]
 }
