--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -82,6 +82,22 @@ jobs:
             package-lock.json
             playwright.config.ts
 
+      - name: Ensure Rollup native bindings in lockfile
+        shell: bash
+        run: |
+          ROLLUP_VERSION=$(node -p "require('./package.json').devDependencies.rollup")
+          case "$RUNNER_OS" in
+            macOS)
+              npm install --package-lock-only --ignore-scripts --platform=darwin --arch=arm64 "@rollup/rollup-darwin-arm64@${ROLLUP_VERSION}"
+              npm install --package-lock-only --ignore-scripts --platform=darwin --arch=x64 "@rollup/rollup-darwin-x64@${ROLLUP_VERSION}"
+              ;;
+            Windows)
+              npm install --package-lock-only --ignore-scripts --platform=win32 --arch=x64 "@rollup/rollup-win32-x64-msvc@${ROLLUP_VERSION}"
+              ;;
+            *)
+              ;;
+          esac
+
       - name: Install dependencies
         run: npm ci
 
