feat: refactor button component and add component tests

--- a/package.json
+++ b/package.json
@@ -16,8 +16,10 @@
     "lint:fix": "eslint . --fix && npm run format",
     "format": "prettier --write .",
     "format:check": "prettier --check .",
-    "test:unit": "vitest",
-    "test:unit:watch": "vitest --watch",
+    "test:unit": "vitest --config vitest.unit.config.ts",
+    "test:unit:watch": "vitest --config vitest.unit.config.ts --watch",
+    "test:components": "vitest --config vitest.components.config.ts",
+    "test:components:watch": "vitest --config vitest.components.config.ts --watch",
     "test:e2e": "playwright test",
     "test:e2e:ui": "playwright test --ui"
   },
@@ -39,6 +41,9 @@
     "@electron/fuses": "1.8.0",
     "@playwright/test": "1.55.1",
     "@tailwindcss/vite": "4.1.13",
+    "@testing-library/dom": "10.4.1",
+    "@testing-library/jest-dom": "6.9.1",
+    "@testing-library/react": "16.3.0",
     "@types/electron-squirrel-startup": "1.0.2",
     "@types/node": "24.5.2",
     "@types/react": "19.1.14",
@@ -50,6 +55,7 @@
     "eslint-import-resolver-typescript": "3.7.0",
     "eslint-plugin-import": "2.32.0",
     "globals": "15.14.0",
+    "jsdom": "27.0.0",
     "prettier": "3.6.2",
     "rollup": "4.52.3",
     "tailwindcss": "4.1.13",
