--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -56,9 +56,31 @@ jobs:
       - name: Run unit tests
         run: npm run test:unit
 
+  components:
+    name: Component tests
+    needs: lint
+    runs-on: ubuntu-22.04
+
+    steps:
+      - name: Checkout repository
+        uses: actions/checkout@v4
+
+      - name: Setup Node.js
+        uses: actions/setup-node@v4
+        with:
+          node-version: 20
+          cache: npm
+          cache-dependency-path: package-lock.json
+
+      - name: Install dependencies
+        run: npm ci
+
+      - name: Run component tests
+        run: npm run test:components
+
   e2e:
     name: E2E test on ${{ matrix.os }}
-    needs: unit
+    needs: unit,components
     runs-on: ${{ matrix.os }}
     timeout-minutes: 25
     strategy:
