feat: restructure components and update configuration for shadcn integration

--- a/tsconfig.paths.json
+++ b/tsconfig.paths.json
@@ -2,10 +2,10 @@
   "compilerOptions": {
     "baseUrl": ".",
     "paths": {
-      "@components/*": ["src/app/renderer/components/*"],
       "@main/*": ["src/app/main/*"],
       "@preload/*": ["src/app/preload/*"],
-      "@renderer/*": ["src/app/renderer/*"]
+      "@renderer/*": ["src/app/renderer/*"],
+      "@shadcn/*": ["src/app/renderer/shadcn/*"]
     }
   }
 }
