feat: add react-router and create HomePage component for routing

--- a/package.json
+++ b/package.json
@@ -73,6 +73,7 @@
     "@radix-ui/react-slot": "^1.2.3",
     "electron-squirrel-startup": "1.0.1",
     "react": "19.1.1",
-    "react-dom": "19.1.1"
+    "react-dom": "19.1.1",
+    "react-router": "^7.9.3"
   }
 }
