--- a/package.json
+++ b/package.json
@@ -49,8 +49,8 @@
     "@types/react": "19.1.14",
     "@types/react-dom": "19.1.9",
     "@vitejs/plugin-react": "5.0.4",
-    "class-variance-authority": "^0.7.1",
-    "clsx": "^2.1.1",
+    "class-variance-authority": "0.7.1",
+    "clsx": "2.1.1",
     "electron": "38.1.2",
     "eslint": "9.36.0",
     "eslint-config-prettier": "10.1.8",
@@ -58,22 +58,24 @@
     "eslint-plugin-import": "2.32.0",
     "globals": "15.14.0",
     "jsdom": "27.0.0",
-    "lucide-react": "^0.544.0",
+    "lucide-react": "0.544.0",
     "prettier": "3.6.2",
     "rollup": "4.52.3",
-    "tailwind-merge": "^3.3.1",
+    "tailwind-merge": "3.3.1",
     "tailwindcss": "4.1.13",
-    "tw-animate-css": "^1.4.0",
+    "tw-animate-css": "1.4.0",
     "typescript": "5.9.2",
     "typescript-eslint": "8.44.1",
     "vite": "7.1.7",
     "vitest": "3.2.4"
   },
   "dependencies": {
-    "@radix-ui/react-slot": "^1.2.3",
+    "@radix-ui/react-slot": "1.2.3",
+    "echarts": "^6.0.0",
+    "echarts-for-react": "3.0.2",
     "electron-squirrel-startup": "1.0.1",
     "react": "19.1.1",
     "react-dom": "19.1.1",
-    "react-router": "^7.9.3"
+    "react-router": "7.9.3"
   }
 }
