--- a/package.json
+++ b/package.json
@@ -82,6 +82,7 @@
     "echarts": "^6.0.0",
     "echarts-for-react": "3.0.4",
     "electron-squirrel-startup": "1.0.1",
+    "electron-store": "^11.0.2",
     "react": "19.2.0",
     "react-dom": "19.2.0",
     "react-router": "7.9.4"
