--- a/tsconfig.paths.json
+++ b/tsconfig.paths.json
@@ -5,6 +5,7 @@
       "@main/*": ["src/app/main/*"],
       "@preload/*": ["src/app/preload/*"],
       "@renderer/*": ["src/app/renderer/*"],
+      "@shared/*": ["src/app/shared/*"],
       "@components/*": ["src/app/renderer/components/*"],
       "@shadcn/*": ["src/app/renderer/shadcn/*"]
     }
