--- a/package.json
+++ b/package.json
@@ -50,7 +50,7 @@
     "@types/react": "19.2.1",
     "@types/react-dom": "19.2.1",
     "@vitejs/plugin-react": "5.0.4",
-    "class-variance-authority": "0.7.1",
+    "class-variance-authority": "^0.7.1",
     "clsx": "2.1.1",
     "electron": "38.2.2",
     "eslint": "9.37.0",
@@ -59,7 +59,7 @@
     "eslint-plugin-import": "2.32.0",
     "globals": "16.4.0",
     "jsdom": "27.0.0",
-    "lucide-react": "0.545.0",
+    "lucide-react": "^0.545.0",
     "prettier": "3.6.2",
     "rollup": "4.52.4",
     "tailwind-merge": "3.3.1",
@@ -72,17 +72,22 @@
     "vitest": "3.2.4"
   },
   "dependencies": {
+    "@headless-tree/core": "^1.5.0",
+    "@headless-tree/react": "^1.5.0",
     "@radix-ui/react-checkbox": "^1.3.3",
     "@radix-ui/react-dialog": "^1.1.15",
     "@radix-ui/react-dropdown-menu": "^2.1.16",
     "@radix-ui/react-label": "^2.1.7",
     "@radix-ui/react-menubar": "^1.1.16",
     "@radix-ui/react-select": "^2.2.6",
-    "@radix-ui/react-slot": "1.2.3",
+    "@radix-ui/react-separator": "^1.1.7",
+    "@radix-ui/react-slot": "^1.2.3",
+    "@radix-ui/react-tooltip": "^1.2.8",
     "echarts": "^6.0.0",
     "echarts-for-react": "3.0.4",
     "electron-squirrel-startup": "1.0.1",
     "electron-store": "^11.0.2",
+    "radix-ui": "^1.4.3",
     "react": "19.2.0",
     "react-dom": "19.2.0",
     "react-router": "7.9.4"
