refactor: restructure channel file handling and update IPC contracts

--- a/tsconfig.node.json
+++ b/tsconfig.node.json
@@ -9,7 +9,8 @@
   "include": [
     "src/app/main/**/*.ts",
     "src/app/preload/**/*.ts",
-    "src/test/main/**/*.ts",
+    "src/app/shared/**/*.ts",
+    "src/test/**/*.ts",
     "types/**/*.d.ts"
   ]
 }
