--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
     "eslint-config-prettier": "10.1.8",
     "eslint-import-resolver-typescript": "4.4.4",
     "eslint-plugin-import": "2.32.0",
+    "eslint-plugin-unused-imports": "4.1.4",
     "globals": "16.4.0",
     "jsdom": "27.0.0",
     "lucide-react": "^0.545.0",
