--- a/package.json
+++ b/package.json
@@ -85,13 +85,16 @@
     "@radix-ui/react-separator": "^1.1.7",
     "@radix-ui/react-slot": "^1.2.3",
     "@radix-ui/react-tooltip": "^1.2.8",
+    "@tabler/icons-react": "^3.35.0",
     "echarts": "^6.0.0",
     "echarts-for-react": "3.0.4",
     "electron-squirrel-startup": "1.0.1",
     "electron-store": "^11.0.2",
+    "nanoid": "^5.1.6",
     "radix-ui": "^1.4.3",
     "react": "19.2.0",
     "react-dom": "19.2.0",
-    "react-router": "7.9.4"
+    "react-router": "7.9.4",
+    "zustand": "^5.0.8"
   }
 }
