--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "@testing-library/dom": "10.4.1",
     "@testing-library/jest-dom": "6.9.1",
     "@testing-library/react": "16.3.0",
+    "@types/color": "^4.2.0",
     "@types/electron-squirrel-startup": "1.0.2",
     "@types/node": "24.8.1",
     "@types/react": "19.2.2",
@@ -83,9 +84,10 @@
     "@radix-ui/react-menubar": "^1.1.16",
     "@radix-ui/react-select": "^2.2.6",
     "@radix-ui/react-separator": "^1.1.7",
-    "@radix-ui/react-slot": "^1.2.3",
+    "@radix-ui/react-slot": "^1.2.4",
     "@radix-ui/react-tooltip": "^1.2.8",
     "@tabler/icons-react": "^3.35.0",
+    "color": "^5.0.3",
     "echarts": "^6.0.0",
     "echarts-for-react": "3.0.4",
     "electron-squirrel-startup": "1.0.1",
