--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "ESPlotter",
-  "productName": "ESPlotter",
+  "name": "esplotter",
+  "productName": "esplotter",
   "version": "1.0.0",
   "description": "My Electron application description",
   "main": ".vite/build/main.mjs",
