feat: enhance end-to-end testing setup with packaged app support and configuration updates

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -136,7 +136,7 @@ jobs:
         run: npx playwright install
 
       - name: Run Playwright tests
-        run: npm run test:e2e
+        run: npm run test:e2e:compiled
 
       - name: Upload Playwright artifacts
         if: always()
