fix: replace set command with cross-env for environment variable in package:e2e script

--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "build:electron": "tsc -p tsconfig.node.json --noEmit && vite build --config vite.main.config.mts && vite build --config vite.preload.config.mts",
     "pretest:e2e": "npm run build:electron",
     "package": "electron-forge package",
-    "package:e2e": "set ESPLOTTER_ENABLE_NODE_INSPECT=1&& electron-forge package",
+    "package:e2e": "cross-env ESPLOTTER_ENABLE_NODE_INSPECT=1 electron-forge package",
     "make": "electron-forge make",
     "publish": "electron-forge publish",
     "lint": "eslint . && npm run format:check",
@@ -51,6 +51,7 @@
     "@types/electron-squirrel-startup": "1.0.2",
     "@types/node": "24.8.1",
     "@types/react": "19.2.2",
+    "cross-env": "10.1.0",
     "@types/react-dom": "19.2.2",
     "@vitejs/plugin-react": "5.0.4",
     "class-variance-authority": "^0.7.1",
