ci: update release workflow and docs

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "esplotter",
-  "productName": "esplotter",
+  "productName": "ESPlotter",
   "version": "1.0.0",
   "description": "My Electron application description",
   "main": ".vite/build/main.mjs",
@@ -40,6 +40,7 @@
     "@electron-forge/plugin-auto-unpack-natives": "7.11.1",
     "@electron-forge/plugin-fuses": "7.11.1",
     "@electron-forge/plugin-vite": "7.11.1",
+    "@electron-forge/publisher-github": "^7.11.1",
     "@electron/fuses": "1.8.0",
     "@faker-js/faker": "^10.1.0",
     "@playwright/test": "1.57.0",
@@ -51,11 +52,11 @@
     "@types/electron-squirrel-startup": "1.0.2",
     "@types/node": "25.0.9",
     "@types/react": "19.2.8",
-    "cross-env": "10.1.0",
     "@types/react-dom": "19.2.3",
     "@vitejs/plugin-react": "5.1.2",
     "class-variance-authority": "^0.7.1",
     "clsx": "2.1.1",
+    "cross-env": "10.1.0",
     "electron": "40.0.0",
     "eslint": "9.39.2",
     "eslint-config-prettier": "10.1.8",
@@ -73,6 +74,7 @@
     "type-fest": "^5.4.1",
     "typescript": "5.9.3",
     "typescript-eslint": "8.53.0",
+    "update-electron-app": "^3.1.2",
     "vite": "7.3.1",
     "vitest": "4.0.17"
   },
