--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "productName": "ESPlotter",
   "version": "1.1.2",
   "description": "My Electron application description",
+  "repository": "ESPlotter/ESPlotter",
   "main": ".vite/build/main.mjs",
   "scripts": {
     "start": "electron-forge start",
